final code fixes