@@ -1,6 +1,7 @@
 package com.electiq.backend.service;
 
 import com.electiq.backend.cache.CacheService;
+import com.electiq.backend.config.AppConstants;
 import com.electiq.backend.dto.AssistantRequest;
 import com.electiq.backend.dto.AssistantResponse;
 import com.electiq.backend.dto.ElectionTimelineResponse;
@@ -13,38 +14,41 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * Service responsible for handling AI assistant queries.
+ * Orchestrates AI assistant responses for ElectIQ.
  *
- * <p>Routing logic:
+ * <h2>Routing strategy (priority order)</h2>
  * <ol>
- *   <li>Rejects non-election-related questions immediately.</li>
- *   <li>Returns static responses for common queries (registration, timelines, etc.).</li>
- *   <li>Falls back to Vertex AI (Gemini) only for complex election questions.</li>
+ *   <li>Return cached response immediately if available.</li>
+ *   <li>Reject non-election-related questions.</li>
+ *   <li>Return static responses for well-known query types.</li>
+ *   <li>Fall back to Vertex AI (Gemini) for complex or open-ended election questions.</li>
  * </ol>
+ *
+ * <p>All inputs are normalised (trimmed, lowercased) before processing.
+ * Results are stored in the cache for subsequent identical queries.
  */
 @Service
 public class AssistantService {
 
     private static final Logger logger = LoggerFactory.getLogger(AssistantService.class);
 
-    private static final String SYSTEM_PROMPT =
-            "You're ElectIQ, an election assistant. Answer only election questions in clear sentences under 60 words. " +
-            "If unrelated, refuse. Don't hallucinate dates. If unknown, advise checking official updates. User: ";
+    // -------------------------------------------------------------------------
+    // Intent keyword lists
+    // -------------------------------------------------------------------------
 
-    private static final String SOURCE_NOTE = "\n\nSource: Election dataset (based on publicly available schedules and estimates).";
-
-    private static final List<String> ELECTION_KEYWORDS = Arrays.asList(
+    private static final List<String> ELECTION_KEYWORDS = List.of(
             "vote", "voting", "election", "poll", "ballot", "candidate",
             "nota", "democracy", "voter", "campaign", "politics",
-            "government", "parliament", "assembly", "president", "minister", "mayor", "mla", "mp"
+            "government", "parliament", "assembly", "president", "minister",
+            "mayor", "mla", "mp"
     );
 
-    private static final List<String> TIMELINE_TRIGGERS = Arrays.asList(
+    private static final List<String> TIMELINE_TRIGGERS = List.of(
             "next election", "upcoming election", "election date",
             "polling date", "schedule", "when is election"
     );
 
-    private static final List<String> INDIAN_STATES = Arrays.asList(
+    private static final List<String> INDIAN_STATES = List.of(
             "andhra", "arunachal", "assam", "bihar", "chhattisgarh", "goa", "gujarat",
             "haryana", "himachal", "jharkhand", "karnataka", "kerala", "madhya pradesh",
             "maharashtra", "manipur", "meghalaya", "mizoram", "nagaland", "odisha",
@@ -52,124 +56,215 @@ public class AssistantService {
             "uttar pradesh", "uttarakhand", "west bengal", "delhi", "kashmir", "jammu"
     );
 
+    // -------------------------------------------------------------------------
+    // Dependencies (constructor-injected)
+    // -------------------------------------------------------------------------
+
     private final ElectionService electionService;
     private final VertexAIService vertexAIService;
-    private final CacheService cacheService;
+    private final CacheService    cacheService;
 
-    public AssistantService(ElectionService electionService, VertexAIService vertexAIService, CacheService cacheService) {
+    public AssistantService(ElectionService electionService,
+                            VertexAIService vertexAIService,
+                            CacheService cacheService) {
         this.electionService = electionService;
         this.vertexAIService = vertexAIService;
-        this.cacheService = cacheService;
+        this.cacheService    = cacheService;
     }
 
+    // -------------------------------------------------------------------------
+    // Public API
+    // -------------------------------------------------------------------------
+
+    /**
+     * Processes an assistant request and returns an appropriate response.
+     *
+     * @param request the incoming assistant request; may be {@code null}
+     * @return a structured {@link AssistantResponse} — never {@code null}
+     */
     public AssistantResponse askQuestion(AssistantRequest request) {
-        if (request == null || request.getQuestion() == null || request.getQuestion().trim().isEmpty()) {
-            return new AssistantResponse("Please provide a question.");
+        if (isBlank(request)) {
+            return respond(AppConstants.MSG_PROVIDE_QUESTION);
         }
 
-        // Cost Opt: Normalize query (trim/lowercase)
-        String query = request.getQuestion().trim().toLowerCase();
+        String query = normalise(request.getQuestion());
 
-        // Speed: Check cache first (Lazy TTL handled by CacheService)
-        String cachedResponse = cacheService.get(query);
-        if (cachedResponse != null) {
-            logger.info("Cache hit for query: {}", query);
-            return new AssistantResponse(cachedResponse);
+        // 1. Cache-first lookup
+        String cached = cacheService.get(query);
+        if (cached != null) {
+            logger.info("Cache hit for query");
+            return respond(cached);
         }
-        logger.info("Cache miss for query: {}", query);
+        logger.info("Cache miss — processing query");
 
+        // 2. Relevance filter
         if (!isElectionRelated(query)) {
-            return new AssistantResponse("I can only assist with election-related topics.");
+            return respond(AppConstants.MSG_ONLY_ELECTION_TOPICS);
         }
 
-        // Efficiency: Check static responses before calling LLM
-        String staticResponse = getStaticResponse(query);
+        // 3. Static response routing
+        String staticResponse = resolveStaticResponse(query);
         if (staticResponse != null) {
             cacheService.set(query, staticResponse);
-            return new AssistantResponse(staticResponse);
+            return respond(staticResponse);
         }
 
-        // Fallback to Vertex AI for complex queries
-        String aiAnswer = vertexAIService.generateResponse(SYSTEM_PROMPT + request.getQuestion().trim());
-        cacheService.set(query, aiAnswer);
-        return new AssistantResponse(aiAnswer);
+        // 4. Vertex AI fallback
+        String aiResponse = vertexAIService.generateResponse(
+                AppConstants.SYSTEM_PROMPT + request.getQuestion().trim()
+        );
+        cacheService.set(query, aiResponse);
+        return respond(aiResponse);
     }
 
     // -------------------------------------------------------------------------
-    // Intent Detection
+    // Input validation & normalisation
     // -------------------------------------------------------------------------
 
+    /**
+     * Returns {@code true} when the request or its question field is null/blank.
+     */
+    private boolean isBlank(AssistantRequest request) {
+        return request == null
+                || request.getQuestion() == null
+                || request.getQuestion().isBlank();
+    }
+
+    /**
+     * Normalises raw user input: trims whitespace and converts to lowercase.
+     *
+     * @param input raw question string
+     * @return normalised string, safe for intent matching
+     */
+    private String normalise(String input) {
+        return input.trim().toLowerCase();
+    }
+
+    // -------------------------------------------------------------------------
+    // Intent detection
+    // -------------------------------------------------------------------------
+
+    /**
+     * Returns {@code true} if the query contains at least one election-domain keyword.
+     */
     private boolean isElectionRelated(String query) {
         return ELECTION_KEYWORDS.stream().anyMatch(query::contains);
     }
 
+    /**
+     * Returns {@code true} if the query expresses intent to learn about an election timeline.
+     */
     private boolean hasTimelineIntent(String query) {
         if (TIMELINE_TRIGGERS.stream().anyMatch(query::contains)) {
             return true;
         }
-        // Treat "[state name] + election" as a timeline query
         return query.contains("election") && INDIAN_STATES.stream().anyMatch(query::contains);
     }
 
     // -------------------------------------------------------------------------
-    // Static Response Routing
+    // Static response routing
     // -------------------------------------------------------------------------
 
-    private String getStaticResponse(String query) {
-        if (hasTimelineIntent(query)) {
-            return getTimelineResponse(query);
-        }
-        if (query.contains("register") || query.contains("registration")) {
-            return "You can register to vote online through the official Election Commission portal " +
-                   "or offline by submitting the required forms to your Electoral Registration Officer.";
-        }
-        if (query.contains("how to vote") || query.contains("process of voting")) {
-            return "To vote, verify your name on the electoral roll. On election day, go to your designated " +
-                   "polling booth with valid ID, press the button next to your chosen candidate on the EVM, " +
-                   "and listen for the beep.";
-        }
-        if (query.contains("voter id") || query.contains("id proof")) {
-            return "Valid ID proofs for voting include Voter ID (EPIC), Aadhar card, Passport, Driving License, " +
-                   "PAN card, and other officially recognized government IDs.";
-        }
-        if (query.contains("polling booth") || query.contains("polling station") || query.contains("where to vote")) {
-            return "You can find your polling booth on the official Election Commission website or app " +
-                   "by entering your Voter ID (EPIC) number.";
-        }
-        if (query.contains("nota")) {
-            return "NOTA stands for 'None Of The Above'. It allows voters to reject all candidates in their " +
-                   "constituency while still exercising their democratic right to vote.";
-        }
-        if (query.contains("election types") || query.contains("types of election")) {
-            return "Main election types include General Elections (Lok Sabha), State Assembly Elections, " +
-                   "and Local Body Elections (such as Panchayats and Municipalities).";
-        }
+    /**
+     * Resolves a pre-built response for common, well-understood query types.
+     *
+     * @param query normalised query string
+     * @return a static response string, or {@code null} if none matches
+     */
+    private String resolveStaticResponse(String query) {
+        if (hasTimelineIntent(query))                                         return buildTimelineResponse(query);
+        if (query.contains("register") || query.contains("registration"))     return buildRegistrationResponse();
+        if (query.contains("how to vote") || query.contains("process of voting")) return buildHowToVoteResponse();
+        if (query.contains("voter id") || query.contains("id proof"))         return buildVoterIdResponse();
+        if (query.contains("polling booth") || query.contains("polling station")
+                || query.contains("where to vote"))                           return buildPollingBoothResponse();
+        if (query.contains("nota"))                                           return buildNotaResponse();
+        if (query.contains("election types") || query.contains("types of election")) return buildElectionTypesResponse();
         return null;
     }
 
-    private String getTimelineResponse(String query) {
+    // -------------------------------------------------------------------------
+    // Static response builders
+    // -------------------------------------------------------------------------
+
+    private String buildRegistrationResponse() {
+        return "You can register to vote online through the official Election Commission portal " +
+               "or offline by submitting the required forms to your Electoral Registration Officer.";
+    }
+
+    private String buildHowToVoteResponse() {
+        return "To vote, verify your name on the electoral roll. On election day, go to your " +
+               "designated polling booth with valid ID, press the button next to your chosen " +
+               "candidate on the EVM, and listen for the beep.";
+    }
+
+    private String buildVoterIdResponse() {
+        return "Valid ID proofs for voting include Voter ID (EPIC), Aadhar card, Passport, " +
+               "Driving License, PAN card, and other officially recognised government IDs.";
+    }
+
+    private String buildPollingBoothResponse() {
+        return "You can find your polling booth on the official Election Commission website or app " +
+               "by entering your Voter ID (EPIC) number.";
+    }
+
+    private String buildNotaResponse() {
+        return "NOTA stands for 'None Of The Above'. It allows voters to reject all candidates " +
+               "in their constituency while still exercising their democratic right to vote.";
+    }
+
+    private String buildElectionTypesResponse() {
+        return "Main election types include General Elections (Lok Sabha), State Assembly Elections, " +
+               "and Local Body Elections (such as Panchayats and Municipalities).";
+    }
+
+    /**
+     * Builds a timeline response by extracting the mentioned state from the query
+     * and delegating to {@link ElectionService}.
+     *
+     * @param query normalised query containing a state name
+     * @return human-readable election date string
+     */
+    private String buildTimelineResponse(String query) {
         String detectedState = INDIAN_STATES.stream()
                 .filter(query::contains)
                 .findFirst()
                 .orElse(null);
 
         if (detectedState == null) {
-            return "Official schedule for the upcoming elections has not been fully announced yet. Please specify your state for more details.";
+            return AppConstants.MSG_SCHEDULE_NOT_ANNOUNCED;
         }
 
         ElectionTimelineResponse timeline = electionService.getTimeline(detectedState);
-        String stateName = capitalizeWords(detectedState);
-        
+        String displayName = capitaliseWords(detectedState);
+
         return String.format(
-            "The next election in %s is expected around %s.%s",
-            stateName, timeline.getPollingDate(), SOURCE_NOTE
+                "The next election in %s is expected around %s.%s",
+                displayName, timeline.getPollingDate(), AppConstants.SOURCE_NOTE
         );
     }
 
-    private String capitalizeWords(String str) {
+    // -------------------------------------------------------------------------
+    // Utilities
+    // -------------------------------------------------------------------------
+
+    /**
+     * Capitalises the first letter of each word in a space-separated string.
+     *
+     * @param str input string
+     * @return title-cased string
+     */
+    private String capitaliseWords(String str) {
         if (str == null || str.isEmpty()) return str;
         return Arrays.stream(str.split("\\s+"))
-                .map(t -> t.substring(0, 1).toUpperCase() + t.substring(1))
+                .map(token -> Character.toUpperCase(token.charAt(0)) + token.substring(1))
                 .collect(Collectors.joining(" "));
+    }
+
+    /**
+     * Wraps a plain string in an {@link AssistantResponse}.
+     */
+    private AssistantResponse respond(String message) {
+        return new AssistantResponse(message);
     }
 }
